[workspace]
resolver = "2"
members = [
    "bin/suix",
    "crates/vanity",
    "crates/rpc",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
hex = "0.4"
rand = "0.9.2"
rayon = "1.10"
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
rpc = { path = "crates/rpc" }
serde_json = "1.0"
sui-keys = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.54.1" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.54.1" }
tokio = { version = "1.0", features = ["full"] }
vanity = { path = "crates/vanity" }
