[workspace]
resolver = "2"
members = [
    "bin/suix",
    "crates/vanity",
    "crates/rpc",
    "crates/grpc",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
clap = "4.5"
color-eyre = "0.6"
eyre = "0.6"
grpc = { path = "crates/grpc" }
hex = "0.4"
rand = "0.9.2"
rayon = "1.10"
regex = "1.12.2"
reqwest = "0.12.24"
rpc = { path = "crates/rpc" }
serde = "1.0"
serde_json = "1.0"
sui-keys = { git = "https://github.com/MystenLabs/sui.git" }
sui-rpc-api = { git = "https://github.com/MystenLabs/sui.git" }
sui-types = { git = "https://github.com/MystenLabs/sui.git" }
tokio = "1.48.0"
tonic = "0.14.2"
tracing = "0.1.41"
vanity = { path = "crates/vanity" }
